[tool.poetry]
name = "dbt"
version = "0.1.0"
description = ""
authors = ["Vivek Murali <vivekmurali00@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.7.9"
dbt-duckdb = "^1.7.2"
duckdb = "^0.10.0"
boto3 = "^1.34.55"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
